--- a/blogpost.html
+++ b/blogpost.html
@@ -1,10 +1,11 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>Marco</title>
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Aqui vamos a hacer un blog post</h1>
-        <p>Y este es el parrafo de inicio</p>
+        <h1>Canción</h1>
+        <p>Muy pegadiza en Génova, calles con ropa tendida</p>
+        <p>Las calles son estrechas y Marco está tendiendo camisetas</p>
     </body>
 </html>
