commit al master de bolgspot en su version mas reciente

--- a/blogpost.html
+++ b/blogpost.html
@@ -4,8 +4,13 @@
         <link rel="stylesheet" href="css/estilos.css"/>
     </head>
     <body>
-        <h1>Canción</h1>
-        <p>Muy pegadiza en Génova, calles con ropa tendida</p>
-        <p>Las calles son estrechas y Marco está tendiendo camisetas</p>
+        <div id="container">
+            <div id="post">
+                <h1>Canción</h1>
+                <p>Muy pegadiza en Génova, calles con ropa tendida</p>
+                <p>Las calles son estrechas y Marco está tendiendo camisetas</p>
+            </div>
+        </div>
     </body>
+
 </html>
