--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,9 @@
     </head>
     <body>
         <div id="container">
+            <div id="CABECERA">
+            CABECERA
+            </div>
             <div id="post">
                 <h1>Canción</h1>
                 <p>Muy pegadiza en Génova, calles con ropa tendida</p>
