con cabecera sombreada en azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,8 @@
     <body>
         <div id="container">
             <div id="CABECERA">
-            CABECERA
+            Hyperblog
+            <span id="tagline">Tu blog de confianza</span>
             </div>
             <div id="post">
                 <h1>Canción</h1>
