--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,7 @@
                     Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
                     Pero estadísticamente no lo eres... por ahora
                 </p>
+                <p>Ya veremos</p>
             </div>
         </div>
     </body>
