creado div titulitoazul

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,6 +5,7 @@
         <link rel="icon" type="image/png" href="proyecto1/favicon.png">
     </head>
     <body>
+        <div id="titulitoazul"></div>
         <div id="container">
             <div id="post">
                 <h1>Canción</h1>
