Hypertext en div titulitoazul

--- a/blogpost.html
+++ b/blogpost.html
@@ -5,18 +5,20 @@
         <link rel="icon" type="image/png" href="proyecto1/favicon.png">
     </head>
     <body>
-        <div id="titulitoazul"></div>
         <div id="container">
-            <div id="post">
-                <h1>Canción</h1>
-                <p>Muy pegadiza en Génova, calles con ropa tendida</p>
-                <p>Las calles son estrechas y Marco está tendiendo camisetas</p>
-                <p>Los blogs son la mejor forma de copartir información y tus ideas. 
-                    Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
-                    Pero estadísticamente no lo eres... por ahora
-                </p>
-                <p>Ya veremos</p>
+            <div id="titulitoazul">
+             Hypertext   
             </div>
+                <div id="post">
+                    <h1>Canción</h1>
+                    <p>Muy pegadiza en Génova, calles con ropa tendida</p>
+                    <p>Las calles son estrechas y Marco está tendiendo camisetas</p>
+                    <p>Los blogs son la mejor forma de copartir información y tus ideas. 
+                        Mucho más que ir a conferencias o salir en Youtube. Excepto si eres un rockstar.
+                        Pero estadísticamente no lo eres... por ahora
+                    </p>
+                    <p>Ya veremos</p>
+                </div>
         </div>
     </body>
 
