--- a/blogpost.html
+++ b/blogpost.html
@@ -1,12 +1,12 @@
 <html>
     <head>
-        <title>El titulo del post</title>
+        <title>mi amigo Marco</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
         <div id="container">
             <div id="cabecera">
-                Hyperblog
+                Amedio y yo
                 <span id="tagline">Tu blog de cabecera</span>
             </div>
             <div id="post">
