--- a/blogpost.html
+++ b/blogpost.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <div id="container">
-            <div id="CABECERA">
+            <div id="cabecera">
             Hyperblog
             <span id="tagline">Tu blog de confianza</span>
             </div>
