--- a/blogpost.html
+++ b/blogpost.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>EXPERTO EN GITHUB</title>
+        <title>EXPERTO EN GITHUB 2.0 (ssh)</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
